--- a/public/partials/mainV2.html
+++ b/public/partials/mainV2.html
@@ -43,20 +43,24 @@
                     <!-- MGS: this selector not implemented yet. Style as desired -->
                     <h3>KID OR ADULT?</h3>
                     <div class="select-css">
-                        <select>
-                            <option>Adult</option>
-                            <option>Kid</option>
+                        <select ng-model="main.currentAvatarAge" ng-change="main.getSchema()">
+                            <option value="adult">Adult</option>
+                            <option value="child">Kid</option>
                         </select>
                     </div>
-                    <h3>KID'S NAME</h3>
+                    <h3>{{main.currentAvatarAge === 'adult' ? 'ADULT' : 'KID'}}'S NAME</h3>
                     <!-- MGS: this input field was bound to angular -->
                     <input type="text" id="avatar-name-input" placeholder="ex. DADDY" ng-model="main.currentAvatar.name" required autofocus="true">
                     <a href="javascript:void(0);" class="q-circle small">?</a>
                     <div class="error-msg">Error message</div>
-                    <h3>KID'S GENDER</h3>
+                    <h3>{{main.currentAvatarAge === 'adult' ? 'ADULT' : 'KID'}}'S GENDER</h3>
                     <!-- MGS: this selector not implemented yet. Style as desired -->
-                    <a href="javascript:void(0);" class="selected">woman</a>
-                    <a href="javascript:void(0);">man</a>
+                    <div class="select-css">
+                        <select ng-model="main.currentAvatarGender" ng-change="main.getSchema()">
+                            <option value="male">{{main.currentAvatarAge === 'adult' ? 'Man' : 'Boy'}}</option>
+                            <option value="female">{{main.currentAvatarAge === 'adult' ? 'Woman' : 'Girl'}}</option>
+                        </select>
+                    </div>
                 </div>
                 <!-- MGS: The way my selector works currently is thas they clickable choices are actually hidden radio buttons with a styled label which contains a preview image. The buttons themselves can be hidden using css. I wrote a sample repeatable tab to reflect that. If you think that is too difficult to work around, please leave a comment and we can rethink the approach -->
                 <div id="{{property.image_type}}" class="tab-pane tab-pane-style" ng-repeat="property in main.schema">
