new avatar overlay now functions predictably, changed cursor to pointer on + circle, added additional variable to check if pristine

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -355,7 +355,8 @@ input#avatar-name-input {
   color: #fff;
   line-height: 45px;
   text-align: center;
-  background: #30a6c3; }
+  background: #30a6c3;
+  cursor: pointer; }
 
 .q-circle.small {
   width: 30px;
