--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -263,6 +263,7 @@ input#avatar-name-input {
     line-height: 45px;
     text-align: center;
     background: #30a6c3;
+    cursor: pointer;
 }
 
 .q-circle.small{
