--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -46,12 +46,14 @@ $raleway: 'Raleway', tahoma, sans-serif;
 //our css
 #creationTool{
     overflow:hidden;
-    margin-top:30px;
+    /*margin-top:30px;*/
+    margin-top:14px;
 }
 #topPartWrapper {
     overflow: hidden;
     position: relative;
-    margin-bottom:30px;
+    /*margin-bottom:30px;*/
+    margin-bottom:14px;
     text-align: center;
 }
 #topPartWrapper > input{
@@ -67,7 +69,8 @@ $raleway: 'Raleway', tahoma, sans-serif;
 #topPartWrapper > a {
     position: absolute;
     right: 20px;
-    top:10px;
+    /*top:10px;*/
+    top:4px;
 }
 
 #tabs,#slider{
@@ -120,7 +123,8 @@ a:hover, a:focus{
 #tabs .tab-pane-style {
     width: 338px;
     background-color: #eff5f7;
-    min-height: 620px;
+    /*min-height: 620px;*/
+    min-height: 500px;
     padding:0 20px;
     position: relative;
     overflow:hidden;
@@ -245,7 +249,7 @@ ul{
 }
 
 input{
-    padding:16px 20px;
+    padding:10px 20px;
 }
 
 input#avatar-name-input {
@@ -334,13 +338,19 @@ input#avatar-name-input {
   position:relative;
   margin-left: 20px;
   width: 430px;
+  text-align:center;
 }
 #slider  img{
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:auto;
+  /*width:100%;
+  height:auto;*/
+  width: auto;
+  height: 497px;
+
+  left: 0;
+  position: absolute;
+  top: 0;
+  right:0;
+  margin:0 auto;
 }
 #slider img:first-child{
   position:relative;
@@ -348,17 +358,21 @@ input#avatar-name-input {
 
 #slider ul{
   padding:0;
+
+  margin: 0 auto;
 }
 #slider .q-circle.big{
     font-size: 67px;
     height: 70px;
-    left: 0;
     line-height: 70px;
     margin: 0 auto;
     position: absolute;
-    right: 0;
-    top: 20%;
     width: 70px;
+    /*left: 0;
+    right: 0;
+    top: 20%;*/
+    right: 6%;
+    top: 36%;
 }
 
 #slider .new-char-txt{
@@ -375,11 +389,7 @@ input#avatar-name-input {
     top: 39%;
     width: 78%;
 }
-#slider img {
-    left: 0;
-    position: absolute;
-    top: 0;
-}
+
 #slider #avatar-name-input {
     border: 1px solid #30a6c3;
     -moz-border-radius: 3px;
@@ -389,13 +399,14 @@ input#avatar-name-input {
     font-size:22px;
     font-weight:700;
     text-align: center;
-    padding:16px 20px;
+    padding:10px 20px;
     width:100%;
 }
 .avatar-selection{
     overflow:hidden;
     width:100%;
     max-width:430px;
+    margin-top: 10px !important;
 }
 .avatar-selection > li{
     float:left;
@@ -412,7 +423,7 @@ input#avatar-name-input {
     display: inline-block;
     height: 34px;
     position: relative;
-    top: 15px;
+    top: 8px;
     width: 20px;
 }
 
@@ -515,7 +526,14 @@ input#avatar-name-input {
 /*bottom part*/
 #bottomPartWrapper{
     border-top:1px solid #30a6c3;
-    margin:20px 0 15px 0;
+    /*margin:20px 0 15px 0;*/
+
+    margin: 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #fff;
+    padding-bottom: 10px;
 }
 
 .steps-menu{
@@ -597,7 +615,7 @@ input#avatar-name-input {
 }
 
 #bottomPartWrapper > .container{
-    margin-top:15px;
+    margin-top:10px;
 }
 .blue-btn {
     background-color: #30a6c3;
@@ -671,4 +689,17 @@ input[type="radio"]:checked + label {
     .steps-menu{
         margin-top:30px;
     }
+}
+
+/*display none*/
+.banner {
+    display: none;
+}
+
+p.ng-scope {
+    display: none;
+}
+
+#slider .new-char-txt{
+    display:none;
 }
