--- a/public/css/main.css
+++ b/public/css/main.css
@@ -198,7 +198,7 @@ a:hover, a:focus {
 #tabs > ul {
   width: 132px;
   margin: 0;
-  padding: 30px 0 0 0; }
+  padding: 30px 0 30px 0; }
 
 #tabs li {
   background-color: #e1e8ea;
@@ -230,7 +230,8 @@ a:hover, a:focus {
 #tabs .tab-pane-style {
   width: 338px;
   background-color: #eff5f7;
-  min-height: 620px;
+  /*min-height: 620px;*/
+  min-height: 700px;
   padding: 0 20px;
   position: relative;
   overflow: hidden;
@@ -704,3 +705,16 @@ input[type="radio"]:checked + label {
     float: none; }
   .steps-menu {
     margin-top: 30px; } }
+
+/*display none*/
+.banner {
+  display: none; }
+
+p.ng-scope {
+  display: none; }
+
+#slider .new-char-txt {
+  display: none; }
+
+.character-wrapper.container {
+  padding-bottom: 150px; }
