made the login pane visible

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -696,9 +696,9 @@ input[type="radio"]:checked + label {
     display: none;
 }
 
-p.ng-scope {
-    display: none;
-}
+// p.ng-scope {
+//     display: none;
+// }
 
 #slider .new-char-txt{
     display:none;
