--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -115,7 +115,7 @@
                 <!-- bottom buttons -->
                 <!-- MGS: The buttons are not implemented yet, in the future the submit button will redirect to the "preview" view -->
                 <div class="clear-fix"></div><!--added div-->
-                <a href="" ng-click="main.submitPreview()" class="bottom-btn">Save Changes</a><!--added class-->
+                <a href="" ng-click="main.saveChanges()" class="bottom-btn">Save Changes</a><!--added class-->
                 <a ng-click="main.deleteUserAvatars()" href="" target="_self" class="bottom-btn">Clear All</a><!--added class-->
                 <div class="clearfix"></div>
             </section><!-- end id:tabs -->
