--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -180,9 +180,37 @@
                     </li>
                 </ul>
                 <div class="w-col-md-4"><!--added div-->
-                    <a href="javascript:void(0);" class="blue-btn">My characters are ready</a>
+                    <a href="" target="_self" data-toggle="modal" data-target="#myModal" ng-click="main.clearNew()" class="blue-btn">My characters are ready</a>
                     <a href="javascript:void(0);">SKIP TO PREVIEW THE BOOK</a>
                 </div>
             </div>
         </section><!-- end id:bottomPartWrapper -->
     </div><!-- end id:creationTool -->
+    <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Preview Family</h4>
+        </div>
+        <div class="modal-body family">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-2" ng-repeat="value in main.results | limitTo:main.totalAvatars">
+                <div class="graphic">
+                <img class="transparency" src="img/transparency.png">
+                <img class="img" ng-repeat="image in value.images" ng-src="{{main.imageUrls[image].location}}">
+                </div>
+                <h4 class="preview-label">{{value.name}}</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" ng-click="main.submitPreview()">Go to Preview</button>
+        </div>
+      </div>
+    </div>
+  </div>
