added a warning box for clear all avatars button

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -116,7 +116,7 @@
                 <!-- MGS: The buttons are not implemented yet, in the future the submit button will redirect to the "preview" view -->
                 <div class="clear-fix"></div><!--added div-->
                 <a href="" ng-click="main.saveChanges()" class="bottom-btn">Save Changes</a><!--added class-->
-                <a ng-click="main.deleteUserAvatars()" href="" target="_self" class="bottom-btn">Clear All</a><!--added class-->
+                <a ng-click="main.deleteAvatarsConfirm()" href="" target="_self" class="bottom-btn">Clear All</a><!--added class-->
                 <div class="clearfix"></div>
             </section><!-- end id:tabs -->
             <!-- end tab section -->
