--- a/public/css/main.css
+++ b/public/css/main.css
@@ -728,3 +728,17 @@ input[type="radio"]:checked + label {
 
 .character-wrapper.container {
   padding-bottom: 150px; }
+
+.color-thumbs {
+  padding: 10px;
+  background-color: white;
+  margin-bottom: 20px; }
+
+#tabs .tab-pane-style label.color-thumb {
+  width: 50px;
+  height: 50px;
+  border: 2px double gray;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  float: left;
+  margin: 0px 10px 0px 10px; }
