--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -74,17 +74,19 @@
                 <div id="{{property.image_type}}" class="tab-pane tab-pane-style" ng-repeat="property in main.schema">
                     <h3>{{property.image_type_label}}</h3>
                     <div class="color-thumbs">
-                        <input id="radio_btn_color_1" type="radio" value="blue" name="radio_color"></input>
-                        <label class="color-thumb" ng-style="{'background-color': 'blue'}" for="radio_btn_color_1" ></label>
-                        <input id="radio_btn_color_2" type="radio" value="red" name="radio_color"></input>
-                        <label class="color-thumb" ng-style="{'background-color': 'red'}" for="radio_btn_color_2" ></label>
+                        <div ng-repeat="value in property.values | unique: 'color_code'">
+                            <input id="radio_btn_color_{{$index}}" type="radio" value="{{value.color_name}}" name="radio_color"></input>
+                            <label class="color-thumb" ng-style="{'background-color': value.color_code}" for="radio_btn_color_{{$index}}" ></label>
+                        </div>
+<!--                         <input id="radio_btn_color_2" type="radio" value="red" name="radio_color"></input>
+                        <label class="color-thumb" ng-style="{'background-color': 'red'}" for="radio_btn_color_2" ></label> -->
 <!--                         <div class="color-thumb" ng-style="{'background-color': 'blue'}"></div>
                         <div class="color-thumb" ng-style="{'background-color': 'red'}"></div> -->
                         <div class="clearfix"></div>
                     </div>
                     <div ng-repeat="value in property.values | filter:{color_name: 'BLUE'}" >
                         <input id="radio_btn_{{value.image_id}}" type="radio" value="{{value.image_id}}" name="radio_{{property.image_type}}" ng-model="main.currentAvatar.images[$parent.$index]"></input>
-                        <label for="radio_btn_{{value.image_id}}" class="" >
+                        <label for="radio_btn_{{value.image_id}}" class="body-part-label" >
                             <img height="" ng-src="{{value.image_location}}">
                         </label>
 
