--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -201,10 +201,10 @@ padding-left:20px;
     overflow:hidden;
     text-align:center;
 }
-#tabs .tab-pane-style div:nth-child(2n) label{
+#tabs .tab-pane-style div:nth-child(2n) label.body-part-label{
     float:left;
 }
-#tabs .tab-pane-style div:nth-child(2n+1) label{
+#tabs .tab-pane-style div:nth-child(2n+1) label.body-part-label{
     float:right;
 }
 #tabs .tab-pane-style label img{
@@ -717,7 +717,6 @@ input[type="radio"]:checked + label {
 // }
 
 .color-thumbs {
-    padding: 10px;
     background-color: white;
     margin-bottom: 20px;
 }
@@ -728,5 +727,5 @@ input[type="radio"]:checked + label {
     border: 2px double gray;
     border-radius: 50%;
     float: left;
-    margin: 0px 10px 0px 10px;
+    margin: 10px 10px 10px 10px;
 }
