--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -75,16 +75,17 @@
                     <h3>{{property.image_type_label}}</h3>
                     <div class="color-thumbs">
                         <div ng-repeat="value in property.values | unique: 'color_code'">
-                            <input id="radio_btn_color_{{$index}}" type="radio" value="{{value.color_name}}" name="radio_color"></input>
-                            <label class="color-thumb" ng-style="{'background-color': value.color_code}" for="radio_btn_color_{{$index}}" ></label>
+                            <input id="radio_btn_color_{{value.image_id}}_{{value.color_name}}" type="radio" ng-value="value.color_code" name="radio_color_{{property.image_type}}" ng-model="main.colorCode"></input>
+                            <label class="color-thumb" ng-style="{'background-color': value.color_code}" for="radio_btn_color_{{value.image_id}}_{{value.color_name}}" ></label>
                         </div>
 <!--                         <input id="radio_btn_color_2" type="radio" value="red" name="radio_color"></input>
                         <label class="color-thumb" ng-style="{'background-color': 'red'}" for="radio_btn_color_2" ></label> -->
 <!--                         <div class="color-thumb" ng-style="{'background-color': 'blue'}"></div>
                         <div class="color-thumb" ng-style="{'background-color': 'red'}"></div> -->
                         <div class="clearfix"></div>
+                        {{main.colorCode}}
                     </div>
-                    <div ng-repeat="value in property.values | filter:{color_name: 'BLUE'}" >
+                    <div ng-repeat="value in property.values | filter:{color_code: main.colorCode}" >
                         <input id="radio_btn_{{value.image_id}}" type="radio" value="{{value.image_id}}" name="radio_{{property.image_type}}" ng-model="main.currentAvatar.images[$parent.$index]"></input>
                         <label for="radio_btn_{{value.image_id}}" class="body-part-label" >
                             <img height="" ng-src="{{value.image_location}}">
