--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -10,7 +10,7 @@
     <!-- MGS: because I am using angular and front-end routing this file will not have a <body> tag. It will be placed inside NG-VIEW in the main template -->
     <!-- we have not included any other wrapper elements - but there might be a need for more wrapper, depending on final styling. -->
     <p ng-if="!main.currentUserProfile">You are not logged in<br>
-          log in now with <a href="auth" target="_self">PayPal</a> or <a href="/authgoogle" target="_self">Google</a></p>
+          log in now with <a href="auth" target="_self">PayPal</a>, <a href="/authgoogle" target="_self">Google</a>, or <a target="_self" href="/authfacebook">Facebook</a></p>
     <div ng-if="main.currentUserProfile">
         <p>Logged in as:</p>
         <p>Name: {{main.currentUserProfile.name}}</p>
