--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -88,7 +88,7 @@
                     <div ng-repeat="value in property.values | filter:{color_code: main.colorCodes[property.image_type]}" >
                         <input id="radio_btn_{{value.image_id}}" type="radio" value="{{value.image_id}}" name="radio_{{property.image_type}}" ng-model="main.currentAvatar.images[$parent.$index]"></input>
                         <label for="radio_btn_{{value.image_id}}" class="body-part-label" >
-                            <img height="" ng-src="{{value.image_location}}">
+                            <img height="" ng-src="{{value.icon_location}}">
                         </label>
 
                     </div>
