--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);
+@import url(https://fonts.googleapis.com/css?family=Rubik:400,500);
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
@@ -161,38 +162,109 @@ a:hover, a:focus {
   color: #30a6c3;
   opacity: 0.8; }
 
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #3c7c99; }
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #3c7c99; }
+
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: #3c7c99; }
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: #3c7c99; }
+
+.login-info-container {
+  display: none; }
+
 #creationTool {
   overflow: hidden;
   /*margin-top:30px;*/
-  margin-top: 14px; }
+  background-color: #eceadd;
+  font-family: "Rubik", sans-serif; }
 
 #topPartWrapper {
+  height: 80px;
   overflow: hidden;
   position: relative;
-  /*margin-bottom:30px;*/
-  margin-bottom: 14px;
-  text-align: center; }
-
-#topPartWrapper > input {
-  border: 1px solid #30a6c3;
-  color: #30a6c3;
-  font-weight: 700;
-  margin: 0 auto;
   text-align: center;
-  width: 56.2%;
-  font-size: 22px; }
+  background-color: #fff;
+  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  z-index: 300; }
 
-#topPartWrapper > a {
+#topPartWrapper .container {
+  padding-top: 14px;
+  padding-bottom: 14px; }
+
+.header-info {
+  left: 50px;
+  position: absolute;
+  text-align: left;
+  top: 0;
+  width: 90%;
+  z-index: 500; }
+
+.header-info input {
+  /*margin: 0 auto;
+    width:425px;border: 1px solid #30a6c3;*/
+  border: 0;
+  background-color: #3c7c99;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+  width: 380px;
+  -webkit-border-bottom-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5); }
+
+.header-info a {
   position: absolute;
   right: 20px;
-  /*top:10px;*/
   top: 4px; }
 
-#tabs, #slider {
+#topPartWrapper .logo {
+  padding: 0 15px;
+  float: left; }
+
+.header-menu {
+  float: right;
+  margin: 15px 0 0 0; }
+
+.header-menu li {
+  list-style: none;
+  display: inline-block;
+  font-weight: 500;
+  padding-left: 20px; }
+
+.header-menu li a {
+  color: rgba(0, 0, 0, 0.3); }
+
+.tab-wrapper {
+  overflow: hidden;
+  width: 480px; }
+
+.tabs-btn-wrapper {
+  background-color: #fff;
+  height: 70px;
+  overflow: hidden; }
+
+.tab-wrapper, #slider {
   float: left; }
 
 #tabs {
-  width: 470px; }
+  background-color: #fcfcfa;
+  max-height: 535px;
+  overflow-x: hidden;
+  overflow-y: scroll; }
 
 #tabs > ul, #tabs > .tab-pane-style {
   float: left;
@@ -201,40 +273,32 @@ a:hover, a:focus {
 #tabs > ul {
   width: 132px;
   margin: 0;
-  padding: 30px 0 30px 0; }
+  padding: 15px 0 0 0;
+  /*padding: 25px 0 116px 0;*/
+  background-color: #e95b4d; }
 
 #tabs li {
-  background-color: #e1e8ea;
   text-align: center;
-  padding: 24px 5px;
+  /*padding: 25px 5px;*/
+  padding: 13px 5px;
   margin: 6px 6px 6px 0; }
 
-#tabs li.active {
-  background-color: #eff5f7;
-  margin: 0;
-  padding-right: 11px; }
-
-#tabs li.active:first-child {
-  margin-top: 6px; }
-
 #tabs li a {
-  color: #595e5f;
-  font-size: 14px;
+  color: rgba(255, 254, 253, 0.7);
+  font-size: 20px;
   text-transform: uppercase;
-  font-weight: 600; }
+  font-weight: 400; }
 
 #tabs li.active a {
-  font-weight: 700;
-  color: #30a6c3; }
+  font-weight: 500;
+  color: #fffefd; }
 
 a:hover, a:focus {
   text-decoration: none; }
 
 #tabs .tab-pane-style {
-  width: 338px;
-  background-color: #eff5f7;
-  /*min-height: 620px;*/
-  min-height: 700px;
+  width: 330px;
+  background-color: #fcfcfa;
   padding: 0 20px;
   position: relative;
   overflow: hidden;
@@ -244,28 +308,28 @@ a:hover, a:focus {
   display: block; }
 
 #tabs .tab-pane-style h3 {
-  margin: 20px 0 10px 0;
+  margin: 32px 0 10px 0;
   padding: 0;
-  color: #595e5f;
-  font-weight: 700;
-  font-size: 12px;
+  color: #3c7c99;
+  font-weight: 500;
+  font-size: 14px;
   text-transform: uppercase; }
 
 #nameGender > .select-css {
   overflow: hidden;
   width: 100%;
   background: #fff url("/img/down_arrow.png") no-repeat scroll 95% center;
-  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14);
-  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14); }
+  border: 1px solid #c2d5dd;
+  -webkit-border-radius: 3px;
+  border-radius: 3px; }
 
 #tabs .tab-pane-style select, #tabs .tab-pane-style input {
-  color: #30a6c3;
+  color: #3c7c99;
   font-weight: 400;
   font-size: 18px;
   border: 0; }
 
 #tabs .tab-pane-style select {
-  /*padding: 16px 20px;*/
   width: 113%;
   background: transparent none repeat scroll 0 0;
   -webkit-appearance: none;
@@ -285,8 +349,9 @@ a:hover, a:focus {
 
 #tabs .tab-pane-style input {
   width: 100%;
-  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14);
-  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14); }
+  border: 1px solid #c2d5dd;
+  -webkit-border-radius: 3px;
+  border-radius: 3px; }
 
 #tabs > .tab-pane-style.ng-scope {
   display: none; }
@@ -315,27 +380,46 @@ a:hover, a:focus {
   margin: 0 auto;
   max-height: 142px; }
 
-#tabs .bottom-btn {
-  background-color: #eff5f7;
-  border: 1px solid #30a6c3;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  display: inline-block;
-  padding: 12px 5px;
+.tabs-btn-wrapper .tab-btn-clear {
+  width: 132px;
+  background-color: #fffcfc;
   text-align: center;
-  /*width: 48%;*/
-  width: 35%;
-  margin-left: 2%;
-  float: right;
-  font-size: 17px;
-  font-weight: 600; }
+  font-size: 13px;
+  font-weight: 500;
+  display: block;
+  color: rgba(233, 91, 77, 0.8);
+  float: left;
+  height: 70px;
+  text-transform: uppercase; }
 
-/*.bottom-btn:last-of-type {
-    float: right;
-}*/
-@media (max-width: 990px) {
-  #tabs .bottom-btn {
-    width: 34%; } }
+.tabs-btn-wrapper .tab-btn-save {
+  background-color: #fff;
+  text-align: center;
+  display: block;
+  color: #3c7c99;
+  float: left;
+  height: 70px;
+  text-transform: uppercase;
+  width: 330px; }
+
+.tab-btn-clear > a, .tab-btn-save > a {
+  position: relative;
+  font-size: 13px;
+  font-weight: 500; }
+
+.tab-btn-clear > a {
+  color: rgba(233, 91, 77, 0.8);
+  top: 25px; }
+
+.tab-btn-save > a {
+  border: 1px solid;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  color: #3c7c99;
+  display: inline-block;
+  padding: 12px;
+  width: 56%;
+  top: 13px; }
 
 ul {
   list-style: none; }
@@ -350,17 +434,31 @@ input#avatar-name-input {
   padding: 16px 46px 16px 20px; }
 
 .q-circle {
-  width: 45px;
-  height: 45px;
+  background: #fff none repeat scroll 0 0;
+  border: 1px solid #d9d8cc;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  font-size: 32px;
-  font-weight: 700;
-  color: #fff;
-  line-height: 45px;
+  color: #5d92aa;
+  cursor: pointer;
+  font-size: 19px;
+  font-weight: 500;
+  height: 36px;
+  line-height: 36px;
   text-align: center;
-  background: #30a6c3;
-  cursor: pointer; }
+  width: 36px; }
+
+.i-circle {
+  background: #3d7d99 none repeat scroll 0 0;
+  border: 1px solid #3d7d99;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  color: #3d7d99;
+  cursor: pointer;
+  font-weight: 500;
+  height: 26px;
+  text-align: center;
+  width: 26px;
+  display: inline-block; }
 
 .q-circle.small {
   width: 30px;
@@ -369,18 +467,23 @@ input#avatar-name-input {
   font-size: 20px;
   display: inline-block; }
 
-#tabs .tab-pane-style .q-circle.small {
-  /*margin-top: 14px;
-    position: absolute;
-    right: 32px;*/
+#slider .q-circle,
+#slider .i-circle {
+  right: 0;
+  top: 15px; }
+
+#tabs .tab-pane-style .q-circle.small,
+#tabs .tab-pane-style .i-circle.small {
   position: relative;
   float: right;
   right: 10px;
   top: -43px; }
 
-.q-circle:hover, .q-circle:focus, .q-circle-sm:hover, q-circle-sm:focus {
+.q-circle:hover, .q-circle:focus,
+.q-circle-sm:hover, q-circle-sm:focus,
+.i-circle:hover, .i-circle:focus {
   text-decoration: none;
-  color: #fff;
+  color: #5d92aa;
   opacity: 0.8; }
 
 .error-msg {
@@ -420,18 +523,15 @@ input#avatar-name-input {
 /*SLIDER*/
 #slider {
   position: relative;
-  margin-left: 20px;
-  width: 430px;
+  width: 480px;
   text-align: center; }
 
 #slider img {
-  /*width:100%;
-  height:auto;*/
   width: auto;
-  height: 497px;
+  height: 475px;
   left: 0;
   position: absolute;
-  top: 0;
+  top: 60px;
   right: 0;
   margin: 0 auto; }
 
@@ -439,21 +539,22 @@ input#avatar-name-input {
   position: relative; }
 
 #slider ul {
-  padding: 0;
+  padding: 0 0 38px 0;
   margin: 0 auto; }
 
 #slider .q-circle.big {
-  font-size: 67px;
-  height: 70px;
-  line-height: 70px;
+  font-size: 58px;
+  height: 66px;
   margin: 0 auto;
   position: absolute;
-  width: 70px;
-  /*left: 0;
-    right: 0;
-    top: 20%;*/
+  width: 66px;
   right: 6%;
-  top: 36%; }
+  top: 36%;
+  line-height: 59px;
+  font-weight: 400;
+  background-color: #4c869f;
+  color: #fff;
+  border: 0; }
 
 #slider .new-char-txt {
   color: #30a6c3;
@@ -470,21 +571,23 @@ input#avatar-name-input {
   width: 78%; }
 
 #slider #avatar-name-input {
-  border: 1px solid #30a6c3;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  color: #30a6c3;
-  font-size: 22px;
+  background-color: transparent;
+  border: 0 none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  color: #3c7c99;
+  font-size: 32px;
   font-weight: 700;
+  padding: 0;
   text-align: center;
-  padding: 10px 20px;
   width: 100%; }
 
 .avatar-selection {
   overflow: hidden;
   width: 100%;
   max-width: 430px;
-  margin-top: 10px !important; }
+  padding: 0 !important;
+  /*margin-top: 23px !important;*/ }
 
 .avatar-selection > li {
   float: left;
@@ -519,74 +622,87 @@ input#avatar-name-input {
   cursor: not-allowed; }
 
 @media (max-width: 1000px) {
-  #topPartWrapper {
-    text-align: left; }
-  #topPartWrapper > input {
+  /*#topPartWrapper {
+    text-align: left;
+    }
+    #topPartWrapper > input {
     font-size: 18px;
-    width: 80%; }
-  #tabs {
-    width: 47%; }
-  #tabs > ul {
-    width: 30%; }
-  #tabs .tab-pane-style {
-    width: 70%; }
-  #slider {
+    width: 80%;
+    }
+    #tabs {
+    width: 47%;
+    }
+    #tabs > ul {
+    width: 30%;
+    }
+    #tabs .tab-pane-style {
+    width: 70%;
+    }
+    #slider {
     margin-left: 2%;
-    width: 43%; }
-  #tabs .tab-pane-style label {
-    width: 49%;
-    height: auto; }
-  .error-msg {
-    left: 0;
-    right: 0;
-    width: 85.5%;
-    margin-left: auto;
-    margin-right: auto; } }
+    width: 43%;
+    }
+    #tabs .tab-pane-style label{
+    width:49%;
+    height:auto;
+}
+    .error-msg{
+        left: 0;
+        right: 0;
+        width: 85.5%;
+        margin-left: auto;
+        margin-right: auto;
+    }*/ }
 
 @media (max-width: 765px) {
-  #tabs {
+  /*#tabs {
     width: 100%;
-    float: none;
-    max-width: 410px;
-    margin: 0 auto 30px auto; }
-  #tabs > ul {
-    width: 30%; }
-  #tabs .tab-pane-style {
-    width: 70%; }
-  #slider {
+    float:none;
+    max-width:410px;
+    margin:0 auto 30px auto;
+    }
+    #tabs > ul {
+    width: 30%;
+    }
+    #tabs .tab-pane-style {
+    width: 70%;
+    }
+    #slider {
     margin-left: 0;
     width: 100%;
-    float: none;
-    max-width: 410px;
-    margin: 0 auto 30px auto; } }
+    float:none;
+    max-width:410px;
+    margin:0 auto 30px auto;
+    }*/ }
 
 @media (max-width: 390px) {
-  .error-msg {
-    width: 77%; }
-  #topPartWrapper > input {
-    font-size: 15px; }
-  #tabs .tab-pane-style select, #tabs .tab-pane-style input {
-    font-size: 15px; }
-  input#avatar-name-input {
-    padding-left: 10px; }
-  #tabs .tab-pane-style select {
-    padding: 16px 10px; } }
+  /*.error-msg{
+        width: 77%;
+    }
 
-@media (max-width: 390px) {
-  #tabs .bottom-btn {
-    width: 48%;
-    margin: 1%; } }
+    #topPartWrapper > input{
+        font-size:15px;
+    }
+    #tabs .tab-pane-style select, #tabs .tab-pane-style input{
+        font-size: 15px;
+    }
+    input#avatar-name-input{
+        padding-left:10px;
+    }
+    #tabs .tab-pane-style select{
+        padding: 16px 10px;
+    }*/ }
 
 /*bottom part*/
 #bottomPartWrapper {
   border-top: 1px solid #30a6c3;
-  /*margin:20px 0 15px 0;*/
+  height: 99px;
   margin: 0;
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #fff;
-  padding-bottom: 10px; }
+  z-index: 600; }
 
 .steps-menu {
   overflow: hidden;
@@ -602,20 +718,20 @@ input#avatar-name-input {
   display: block; }
 
 .steps-menu > li .avatar-label {
-  color: #e1e8ea;
+  color: #ebebeb;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 500;
   position: relative;
   top: 10px; }
 
 .steps-menu > li.active .avatar-label {
-  color: #30a6c3;
+  color: #3d7d99;
   top: 0; }
 
 .steps-menu > li .circle {
   width: 20px;
   height: 20px;
-  background-color: #e1e8ea;
+  background-color: #ebebeb;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   position: relative;
@@ -625,14 +741,14 @@ input#avatar-name-input {
 .steps-menu > li.active .circle {
   width: 30px;
   height: 30px;
-  border: 4px solid #30a6c3;
+  border: 4px solid #3d7d99;
   top: 0; }
 
 .steps-menu > li.done .circle {
-  background-color: #30a6c3; }
+  background-color: #3d7d99; }
 
 .steps-menu > li .bar {
-  background-color: #e4e4e4;
+  background-color: #ebebeb;
   display: block;
   height: 2px;
   position: relative;
@@ -651,10 +767,11 @@ input#avatar-name-input {
   background-color: transparent; }
 
 .steps-menu > li.done .bar {
-  background-color: #30a6c3; }
+  background-color: #3d7d99; }
 
 #bottomPartWrapper .w-col-md-4 a {
-  display: block;
+  /*display:block;*/
+  display: inline-block;
   text-align: center; }
 
 #bottomPartWrapper > .container {
@@ -673,6 +790,19 @@ input#avatar-name-input {
 .blue-btn:hover, .blue-btn:focus {
   color: #fff; }
 
+.footer-btn {
+  background-color: #e95b4d;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  padding: 16px 30px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px; }
+
+.footer-btn:hover, .footer-btn:focus {
+  color: #fff; }
+
 #bottomPartWrapper .w-col-md-4 {
   width: 33.3333%;
   float: left; }
@@ -686,38 +816,60 @@ input#avatar-name-input {
   background: #30a6c3 url(/img/back_arrow.png) no-repeat 16px center;
   padding-left: 50px; }
 
+#bottomPartWrapper .w-col-md-4 a.footer-btn.back-btn {
+  display: inline-block;
+  opacity: 0;
+  background: #e95b4d url(/img/back_arrow.png) no-repeat 16px center;
+  padding-left: 50px; }
+
+#bottomPartWrapper .w-col-md-4 a.skip-btn {
+  color: rgba(233, 91, 77, 0.5);
+  font-size: 12px;
+  font-weight: 500; }
+
 input[type="radio"] {
   display: none; }
 
 input[type="radio"]:checked + label {
-  outline: 3px solid blue; }
+  outline: 1px solid #d8e5eb; }
+
+input[type="radio"]:checked + label.color-thumb {
+  background: url("/img/tik.png") no-repeat center;
+  outline: 0 none; }
 
 @media (max-width: 600px) {
-  #bottomPartWrapper .w-col-md-4 {
-    width: 50%; }
-  #bottomPartWrapper .w-col-md-4:last-child:before,
-  #bottomPartWrapper .w-col-md-4:last-child::before {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0; }
-  #bottomPartWrapper .w-col-md-4:last-child {
-    width: 100%;
-    float: none;
-    overflow: hidden; }
-  .steps-menu {
-    margin-bottom: 30px; }
-  .steps-menu > li {
-    width: 33.3333%; } }
+  /*#bottomPartWrapper .w-col-md-4 {
+    width:50%;
+    }
+    #bottomPartWrapper .w-col-md-4:last-child:before,
+    #bottomPartWrapper .w-col-md-4:last-child::before{
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+    }
+    #bottomPartWrapper .w-col-md-4:last-child {
+    width:100%;
+    float:none;
+    overflow:hidden;
+    }
+    .steps-menu{
+        margin-bottom:30px;
+    }
+    .steps-menu > li {
+        width: 33.3333%;
+    }*/ }
 
 @media (max-width: 420px) {
-  #bottomPartWrapper .w-col-md-4 {
-    width: 100%;
-    float: none; }
-  .steps-menu {
-    margin-top: 30px; } }
+  /*#bottomPartWrapper .w-col-md-4 {
+    width:100%;
+    float:none;
+    }
+    .steps-menu{
+        margin-top:30px;
+    }*/ }
 
 /*display none*/
 .banner {
@@ -727,7 +879,8 @@ input[type="radio"]:checked + label {
   display: none; }
 
 .character-wrapper.container {
-  padding-bottom: 150px; }
+  /*padding-bottom: 150px;*/
+  padding-bottom: 90px; }
 
 .color-thumbs {
   background-color: white;
@@ -736,8 +889,8 @@ input[type="radio"]:checked + label {
 #tabs .tab-pane-style label.color-thumb {
   width: 50px;
   height: 50px;
-  border: 2px double gray;
+  border: 1px solid #d8e5eb;
   -webkit-border-radius: 50%;
-          border-radius: 50%;
+  border-radius: 50%;
   float: left;
   margin: 10px 10px 10px 10px; }
