--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -128,6 +128,7 @@
         <!-- start slider --><!-- in order to stylize the images with absolute position we need to add different class for each element, for example .eyes-img, .body-img, .hair-img etc -->
         <section id="slider">
             <div class="header-info">
+                <a class="pencil" href="javascript:void(0);"></a>
                 <!-- family's name -->
                 <input type="text" name="" id="" placeholder="FAMILY NAME" value="THE TOKOUSBALIDES" />
                 <!-- help button -->
@@ -143,9 +144,7 @@
                 <!-- not implemented yet but will function predictably -->
                 {{main.currentAvatarIndex}}
                 <li ng-if="main.currentAvatarIndex === main.totalAvatars && main.currentAvatarIndex !== main.maxAvatars">
-                    <a class="prev-btn" ng-class="{inactive: main.currentAvatarIndex === 1}" href="" ng-click="main.prevAvatar()"></a><!--added class-->
                     <div class="q-circle big" ng-click="main.nextAvatar()">+</div>
-                    <a class="next-btn" ng-class="{inactive: main.currentAvatar.name === '' || main.currentAvatar.name === undefined || main.currentAvatarIndex === main.totalAvatars}" href="" ng-click="main.rightArrowClick()"></a><!--added class-->
                     <div class="new-char-txt">YOU ARE ABOUT TO CREATE A NEW CHARACTER</div>
                 </li>
             </ul>
@@ -157,10 +156,11 @@
                 </li>
                 <li>
                     <!-- MGS: Input was connected to angular -->
-                    <input type="text" class="" id="avatar-name-input" placeholder="TIMOS" ng-model="main.currentAvatar.name" required autofocus="true">
+                    <input style="display:none;" type="text" class="" id="avatar-name-input" placeholder="TIMOS" ng-model="main.currentAvatar.name" required autofocus="true">
+                    <div style="display:block;" class="salutation-wrapper">Hey <span class="name-salutation">Timos!</span><a href="javascript:void(0);" class="pencil"></a></div>
                 </li>
                 <li>
-                    <a class="next-btn" ng-class="{inactive: main.currentAvatar.name === '' || main.currentAvatar.name === undefined || main.currentAvatarIndex === main.totalAvatars}" href="" ng-click="main.rightArrowClick()"></a><!--added class-->
+                    <a style="display:none;" class="next-btn" ng-class="{inactive: main.currentAvatar.name === '' || main.currentAvatar.name === undefined || main.currentAvatarIndex === main.totalAvatars}" href="" ng-click="main.rightArrowClick()"></a><!--added class-->
                 </li>
             </ul>
             <div class="clearfix"></div>
