a fix for the bug where avatar is retracted on submit

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -194,7 +194,7 @@
             </ul>
             <div class="w-col-md-4">
                 <!--added div-->
-                <a href="" target="_self" data-toggle="modal" data-target="#myModal" ng-click="main.clearNew()" class="footer-btn">My characters are ready</a>
+                <a href="" target="_self" data-toggle="modal" data-target="#myModal" class="footer-btn">My characters are ready</a>
                 <a href="javascript:void(0);" class="skip-btn">SKIP TO PREVIEW THE BOOK</a>
             </div>
         </div>
