--- a/public/css/main.css
+++ b/public/css/main.css
@@ -307,12 +307,14 @@ a:hover, a:focus {
   text-decoration: none; }
 
 #tabs .tab-pane-style {
-  width: 330px;
+  width: 60%;
   background-color: #fcfcfa;
   padding: 0 20px;
   position: relative;
   overflow: hidden;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 #tabs > .tab-pane-style.active {
   display: block; }
@@ -838,15 +840,21 @@ input[type="radio"]:checked + label.color-thumb {
     max-width: 480px;
     width: 50%; }
   #tabs > ul, .tabs-btn-wrapper .tab-btn-clear {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 40%; }
   #tabs .tab-pane-style, .tabs-btn-wrapper .tab-btn-save {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 60%; }
   .tab-pane .ng-scope {
     text-align: center; }
   #tabs .tab-pane-style label {
     height: auto;
     max-width: 142px;
-    width: 100%; }
+    width: 100%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   #tabs .tab-pane-style div:nth-child(2n+1) label.body-part-label {
     float: none;
     margin-left: auto;
