--- a/public/partials/pfpreview_1.html
+++ b/public/partials/pfpreview_1.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
         <div class="w-col-md-4">
-            <a target="_self" href="/previewbook" class="footer-btn">Continue</a>
+            <a target="_self" ng-click="main.submitPreview()" href="" class="footer-btn">Continue</a>
 <!--             <a href="javascript:void(0);" class="skip-btn">SKIP TO PREVIEW THE BOOK</a> -->
         </div>
     </div>
