--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1162,26 +1162,26 @@ input[type="radio"]:checked + label.color-thumb {
     font-weight:400;
 }
 
-.flipbook{
+.flipbook-style{
     margin: auto;
     max-width: 1008px;
     position: relative;
     width: 100%;
     z-index:200;
 }
-.flipbook .flipbook-placeholder{
+.flipbook-style .flipbook-placeholder{
     width:50%;
     height:auto;
     opacity:0;
 }
 
-.flipbook .page-wrapper{
+.flipbook-style .page-wrapper{
     overflow:hidden;
     z-index:200;
 }
 
 
-.flipbook .page{
+.flipbook-style .page{
     position:absolute;
     width:50%;
     height:100%;
@@ -1191,17 +1191,17 @@ input[type="radio"]:checked + label.color-thumb {
     z-index:200;
 }
 
-.flipbook .page:nth-child(2n+1){
+.flipbook-style .page:nth-child(2n+1){
     left:0;
     right:auto;
 }
 
-.flipbook .page:nth-child(2n){
+.flipbook-style .page:nth-child(2n){
     left:auto;
     right:0;
 }
 
-.flipbook .page img{
+.flipbook-style .page img{
     width:100%;
     vertical-align:middle;
 }
