hidden the flipbook-placeholder via css as it was making the page too tall

--- a/public/partials/pfpreview_2.html
+++ b/public/partials/pfpreview_2.html
@@ -22,6 +22,8 @@
                 <div class="page"><img src="/img/book_page2.png" alt="" /></div>
                 <div class="page"><img src="/img/book_page1.png" alt="" /></div>
                 <div class="page"><img src="/img/book_page2.png" alt="" /></div> -->
+
+                <!-- THIS WAS HIDDEN THROUGH CSS AS IT WAS MAKING THE PAGE TOO LARGE -->
                 <!--Placeholder, required for responsive layout (height). Please do not remove-->
                 <img src="/img/book_page1.png" alt="" class="flipbook-placeholder" />
                 <!--Placeholder, required for responsive layout (height). Please do not remove-->
