--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1109,7 +1109,8 @@ input[type="radio"]:checked + label.color-thumb {
 .flipbook-style .flipbook-placeholder {
   width: 50%;
   height: auto;
-  opacity: 0; }
+  opacity: 0;
+  display: none; }
 
 .flipbook-style .page-wrapper {
   overflow: hidden;
