discovered issue, number of images was not being retrieved, hardcoded number for the sake of stabilizing the branch. Must return to later

--- a/public/partials/pfpreview_2.html
+++ b/public/partials/pfpreview_2.html
@@ -13,10 +13,10 @@
             <strong>Congratulations!</strong> <br />You are few clicks away from your <strong>first Book!</strong>
         </div>
         <!-- flipbook class has been changed to flipbook-style, the flipbook class is necessary for the plugin to work and must contain images - see below MIKE -->
-        <div class="flipbook-style">
+        <div class="flipbook-style" ng-show="preview.loaded">
             <div class="page-wrapper">
                 <div class="flipbook">
-                    <img ng-src="{{'https://pfstories.com/preview' + '/' + preview.folderName + '/' + ($index + 1) + '.PNG'}}" src="" ng-repeat="image in preview.imageList(preview.numberOfImages) track by $index" ng-init="$last && preview.finished()">
+                    <img ng-src="{{'https://pfstories.com/preview' + '/' + preview.folderName + '/' + ($index + 1) + '.PNG'}}" src="" ng-repeat="image in preview.imageList(4) track by $index" ng-init="$last && preview.finished()">
                 </div>
 <!--                 <div class="page"><img src="/img/book_page1.png" alt="" /></div>
                 <div class="page"><img src="/img/book_page2.png" alt="" /></div>
