unhidden the flipbook placeholder (reverting commit ef7df622cb7e9bee63f97d525d82531d5bee02c1), as it was holding the height of the dedication page, must consult with timos

--- a/public/partials/pfpreview_3.html
+++ b/public/partials/pfpreview_3.html
@@ -13,7 +13,7 @@
         <div class="text-container">
             <strong>Congratulations!</strong> <br />You are few clicks away from your <strong>first Book!</strong>
         </div>
-        <div class="flipbook">
+        <div class="flipbook-style">
             <div class="page-wrapper">
 
                 <div class="page"><img src="/img/book_back.png" alt="" /></div>
